# gpt2sp_webapp

./: README.md  app.py  data_parser.py  pyproject.toml
gpt2sp_webapp/: GPT2ForSequenceClassification.py  app.py  data_parser.py  html_parser.py  html_table_builder.py
gpt2sp_webapp/html_dev/: test_html.html
gpt2sp_webapp/transformers_interpret/explainers/: sequence_classification.py
tests/: test_gpt2sp_webapp.py
