[tool.poetry]
name = "gpt2sp_webapp"
version = "0.1.0"
description = "GPT2SP: Agile Story Point Estimator"
authors = ["Michael Fu <michaelfu1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.87.0"
torch = "^1.9.0"
transformers = "^4.9.2"
ipython = "^7.26.0"
captum = "^0.4.0"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
