[tool.poetry]
name = "gpt2sp_webapp"
version = "0.1.1"
description = "GPT2SP: Agile Story Point Estimator"
authors = ["Michael Fu <michaelfu1998@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
streamlit = "^1.38.0"
torch = "^2.4.1"
transformers = "^4.45.0"
ipython = "^8.28.0"
captum = "^0.7.0"
pandas = "^2.2.3"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
